compiler/testData/diagnostics/tests/enum/enumWithEmptyName.kt
// RUN_PIPELINE_TILL: SOURCE
// FIR_IDENTICAL
enum class<!SYNTAX!><!> {
}
